--- a/Honours Project/Base.lproj/Main.storyboard
+++ b/Honours Project/Base.lproj/Main.storyboard
@@ -256,7 +256,7 @@
             </objects>
             <point key="canvasLocation" x="750" y="843"/>
         </scene>
-        <!--Post-->
+        <!--View Controller-->
         <scene sceneID="X62-hY-Pdl">
             <objects>
                 <viewController id="UW5-WC-7xc" sceneMemberID="viewController">
@@ -269,7 +269,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Post" id="2XB-Af-eC9"/>
+                    <tabBarItem key="tabBarItem" systemItem="topRated" id="2XB-Af-eC9"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9Gy-yV-naB" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
