Added Map to the last tab - need to configure each view controller and name them accordingly

--- a/Honours Project/Base.lproj/Main.storyboard
+++ b/Honours Project/Base.lproj/Main.storyboard
@@ -286,6 +286,11 @@
                     <view key="view" contentMode="scaleToFill" id="n65-Jz-hzc">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="mm9-0S-EXC">
+                                <rect key="frame" x="20" y="28" width="280" height="483"/>
+                            </mapView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <tabBarItem key="tabBarItem" systemItem="downloads" id="Oj4-Tr-8GQ"/>
