--- a/Honours Project/Base.lproj/Main.storyboard
+++ b/Honours Project/Base.lproj/Main.storyboard
@@ -66,7 +66,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5g8-l3-8e2">
-                                <rect key="frame" x="137" y="415" width="46" height="30"/>
+                                <rect key="frame" x="137" y="414" width="46" height="30"/>
                                 <state key="normal" title="Button">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -283,7 +283,7 @@
         <!--Map-->
         <scene sceneID="llh-im-djj">
             <objects>
-                <viewController title="Map" id="sdJ-uz-5Yi" sceneMemberID="viewController">
+                <viewController title="Map" id="sdJ-uz-5Yi" customClass="TabMapViewController" customModule="Honours_Project" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="i5C-3V-cch"/>
                         <viewControllerLayoutGuide type="bottom" id="UHh-lO-LWd"/>
@@ -298,8 +298,11 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Map" image="Map Marker-32*" id="Oj4-Tr-8GQ"/>
+                    <tabBarItem key="tabBarItem" title="Map" image="Map Marker-32" id="Oj4-Tr-8GQ"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
+                    <connections>
+                        <outlet property="map" destination="mm9-0S-EXC" id="psc-Nc-FYU"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="y6r-9V-1zD" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -415,7 +418,7 @@
     <resources>
         <image name="Activity Feed-32" width="32" height="32"/>
         <image name="Compact Camera-32" width="32" height="32"/>
-        <image name="Map Marker-32*" width="500" height="500"/>
+        <image name="Map Marker-32" width="32" height="32"/>
         <image name="camera_large.png" width="500" height="500"/>
     </resources>
     <inferredMetricsTieBreakers>
