--- a/Honours Project/Base.lproj/Main.storyboard
+++ b/Honours Project/Base.lproj/Main.storyboard
@@ -71,7 +71,7 @@
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <segue destination="8qA-pb-aIa" kind="show" id="hbl-Lb-EML"/>
+                                    <segue destination="8qA-pb-aIa" kind="show" identifier="login_to_tab" id="hbl-Lb-EML"/>
                                 </connections>
                             </button>
                         </subviews>
