--- a/Honours Project/Base.lproj/Main.storyboard
+++ b/Honours Project/Base.lproj/Main.storyboard
@@ -293,8 +293,10 @@
                                     <color key="textColor" red="0.99457465280000001" green="0.99457465280000001" blue="0.99457465280000001" alpha="1" colorSpace="calibratedRGB"/>
                                 </textAttributes>
                                 <items>
-                                    <navigationItem title="Title" id="Ufp-E2-hrz">
-                                        <barButtonItem key="rightBarButtonItem" systemItem="stop" id="Shm-tn-xjO"/>
+                                    <navigationItem title="InstaMap" id="Ufp-E2-hrz">
+                                        <barButtonItem key="rightBarButtonItem" systemItem="stop" id="Shm-tn-xjO">
+                                            <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        </barButtonItem>
                                     </navigationItem>
                                 </items>
                             </navigationBar>
@@ -302,6 +304,8 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="Post" image="Compact Camera-32" id="2XB-Af-eC9"/>
+                    <toolbarItems/>
+                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="imageView" destination="Vs9-fW-yNI" id="IoB-9l-I2r"/>
                     </connections>
@@ -332,10 +336,14 @@
                                     <color key="textColor" red="0.99457465280000001" green="0.99457465280000001" blue="0.99457465280000001" alpha="1" colorSpace="calibratedRGB"/>
                                 </textAttributes>
                                 <items>
-                                    <navigationItem title="Title" id="fQf-aS-JAK">
+                                    <navigationItem title="InstaMap" id="fQf-aS-JAK">
                                         <rightBarButtonItems>
-                                            <barButtonItem systemItem="stop" id="MQc-Pr-szV"/>
-                                            <barButtonItem systemItem="refresh" id="4WV-44-zfz"/>
+                                            <barButtonItem systemItem="stop" id="MQc-Pr-szV">
+                                                <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                            </barButtonItem>
+                                            <barButtonItem systemItem="refresh" id="4WV-44-zfz">
+                                                <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                            </barButtonItem>
                                         </rightBarButtonItems>
                                     </navigationItem>
                                 </items>
@@ -352,80 +360,6 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="y6r-9V-1zD" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2011" y="1071"/>
-        </scene>
-        <!--View Controller-->
-        <scene sceneID="wO8-G8-YYc">
-            <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="lix-qB-OnH" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <viewController id="ebJ-fO-d2E" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="U74-ve-9DV"/>
-                        <viewControllerLayoutGuide type="bottom" id="yaj-X5-xTf"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="V6v-DA-qjX">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="256" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="3gO-Ox-ZWX">
-                                <rect key="frame" x="0.0" y="67" width="320" height="501"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="customCell" rowHeight="256" id="g7U-y7-pkm" customClass="Cell" customModule="Honours_Project" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="320" height="256"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="g7U-y7-pkm" id="3wR-0g-Xwl">
-                                            <rect key="frame" x="0.0" y="0.0" width="320" height="255"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="mzj-r9-lVL">
-                                                    <rect key="frame" x="40" y="8" width="240" height="174"/>
-                                                </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ezd-Y2-HXQ">
-                                                    <rect key="frame" x="8" y="190" width="155" height="21"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mzk-dl-ejN">
-                                                    <rect key="frame" x="8" y="226" width="93" height="21"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="O8i-HC-xh6">
-                                                    <rect key="frame" x="102" y="226" width="178" height="21"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                            </subviews>
-                                        </tableViewCellContentView>
-                                        <connections>
-                                            <outlet property="platform" destination="Mzk-dl-ejN" id="xMI-gJ-Vy4"/>
-                                            <outlet property="postedImage" destination="mzj-r9-lVL" id="F9p-3F-seS"/>
-                                            <outlet property="timestamp" destination="O8i-HC-xh6" id="yOY-0c-OaO"/>
-                                            <outlet property="username" destination="ezd-Y2-HXQ" id="iXc-dh-V6o"/>
-                                        </connections>
-                                    </tableViewCell>
-                                </prototypes>
-                            </tableView>
-                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="8Eg-cC-5SE">
-                                <rect key="frame" x="0.0" y="20" width="320" height="44"/>
-                                <color key="barTintColor" red="0.14117647059999999" green="0.25098039220000001" blue="0.65098039220000004" alpha="1" colorSpace="calibratedRGB"/>
-                                <textAttributes key="titleTextAttributes">
-                                    <color key="textColor" red="0.99457465280000001" green="0.99457465280000001" blue="0.99457465280000001" alpha="1" colorSpace="calibratedRGB"/>
-                                </textAttributes>
-                                <items>
-                                    <navigationItem title="Title" id="Gg4-4r-SJ9"/>
-                                </items>
-                            </navigationBar>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </view>
-                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
-                </viewController>
-            </objects>
-            <point key="canvasLocation" x="1546" y="-478"/>
         </scene>
         <!--Feed-->
         <scene sceneID="GSt-sM-F1z">
