--- a/Honours Project/Base.lproj/Main.storyboard
+++ b/Honours Project/Base.lproj/Main.storyboard
@@ -335,6 +335,9 @@
                             </barButtonItem>
                             <barButtonItem systemItem="refresh" id="JqM-1r-ZE0">
                                 <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <connections>
+                                    <action selector="refresh:" destination="sdJ-uz-5Yi" id="A6C-BM-3HB"/>
+                                </connections>
                             </barButtonItem>
                         </rightBarButtonItems>
                     </navigationItem>
@@ -405,6 +408,9 @@
                             </barButtonItem>
                             <barButtonItem systemItem="refresh" id="XtG-26-CAz">
                                 <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <connections>
+                                    <action selector="refresh:" destination="c7f-kn-dwE" id="Wq3-F9-u8d"/>
+                                </connections>
                             </barButtonItem>
                         </rightBarButtonItems>
                     </navigationItem>
